# incremental-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  Trunk.toml  experience-logs.md  ideas.md  index.html  justfile  prek.toml  upgrades_and_language.md
.github/workflows/: ci.yml  deploy.yml
.woodpecker/: ci.yaml  deploy.yaml
helper_macros/: Cargo.toml
helper_macros/src/: lib.rs
language/: Cargo.toml
language/src/: compile.rs  lexer.rs  lib.rs  parser.rs
proc_macro/: Cargo.toml
src/: app.rs  basic_terminal_app.rs  beamterm_demo.rs  beamterm_native.rs  blinking_cursor.rs  counter_demo.rs  crossterm.rs  egui.rs  game_state.rs  main.rs  ratzilla.rs  wgpu.rs
src/backend/: audio.rs  backend.rs  beamterm_native.rs  beamterm_web.rs  crossterm.rs  egui.rs  egui_desktop.rs  egui_web.rs  events.rs  input.rs  mod.rs  store_native.rs  store_web.rs
src/code_editor/: actions.rs  code.rs  code_logos.rs  editor.rs  history.rs  python_logos.rs  render.rs  rust_logos.rs
src/demos/: beamterm_demo.rs  code_editor_demo.rs  counter_demo.rs  mod.rs
src/game_scenes/: app_start.rs  base.rs  code_editor.rs  home_terminal.rs  mod.rs  reboot.rs  upgrades.rs
src/game_scenes/home_terminal/: commands.rs  home_terminal.rs  mod.rs
src/game_scenes/home_terminal/commands/: code_command.rs  compile_command.rs  docs_command.rs  exit_command.rs  help_command.rs  mod.rs  reboot_command.rs  reset_command.rs  run_command.rs  save_command.rs  unknown_command.rs  upgrades_command.rs  volume_command.rs
src/game_scenes/logic/: audio.rs  compilation.rs  mod.rs
src/game_scenes/upgrades/: mod.rs  tree.rs  upgrades.rs
src/game_state/: mod.rs  program.rs  resources.rs  save.rs  settings.rs  state.rs  upgrades.rs
src/language/: compile.rs  lexer.rs  mod.rs  parser.rs
src/widgets/: blinking_cursor.rs  cctv_animation.rs  confirm_dialog.rs  dialog.rs  hud.rs  mod.rs  terminal.rs
src/widgets/code_editor/: actions.rs  click.rs  code.rs  code_logos.rs  editor.rs  history.rs  input.rs  mod.rs  not_python_logos.rs  python_logos.rs  render.rs  rust_logos.rs  selection.rs  utils.rs
src/widgets/terminal/: commands.rs  mod.rs  terminal.rs
src/widgets/tree/: flatten.rs  input.rs  mod.rs  tree_item.rs  tree_state.rs
