[package]
name = "incremental-code"
version = "0.1.0"
edition = "2024"

[dependencies]
# general dependencies
ratatui = { version = "0.30.0", default-features = false }
ratatui-core = { version = "0.1.0" }
ratatui-code-editor = { git = "https://github.com/atollk/ratatui-code-editor/", rev = "96800ce1496547f35c1721d24e8c44067b9da0bb", default-features = false }
tachyonfx = { version = "0.25.0", features = ["std"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tree-sitter = { version = "0.26.8", default-features = false, features = ["std"] }
web-time = { version = "1.1" }

# tui dependencies
crossterm = { version = "0.29.0", optional = true }

# opengl dependencies
beamterm-core = { version = "^1.0", optional = true }
ratbeam = { git = "https://github.com/atollk/ratbeam", branch = "main", optional = true }
glutin = { version = "0.32", optional = true }
winit = { version = "0.30", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }
glow = { version = "0.17.0", optional = true }

# ratzilla dependencies
ratzilla = { git = "https://github.com/atollk/ratzilla", branch = "main", optional = true }
beamterm-renderer = { version = "^1.0", optional = true }

# egui dependencies
egui = { version = "0.34", optional = true }
eframe = { version = "0.34", features = ["persistence"], optional = true }
egui_ratatui = { version = "^2.2.0", optional = true }
soft_ratatui = { version = "0.2", optional = true, features = ["unicodefonts"] }

# egui-web dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["EventTarget", "Worker", "WorkerOptions", "WorkerType", "MessageEvent", "HtmlCanvasElement", "Window", "Document"], optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }

# egui-desktop dependencies
env_logger = { version = "0.11.8", optional = true }
anyhow = "1.0.102"
bitflags = "2.11.1"

[package.metadata.bin]
trunk = { version = "0.21.14" }

[features]
tui = [
    "dep:crossterm",
    "ratatui/crossterm",
    "ratatui-code-editor/crossterm",
]
opengl = [
    "dep:beamterm-core",
    "dep:ratbeam",
    'dep:glutin',
    'dep:winit',
    'dep:glow',
    'dep:glutin-winit',
    'dep:raw-window-handle',
]
ratzilla = [
    "dep:beamterm-renderer",
    "dep:ratzilla",
    "tachyonfx/wasm",
]
egui = [
    "dep:egui_ratatui",
    "dep:soft_ratatui",
    "dep:egui",
    "dep:eframe",
]
egui-web = [
    "egui",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "tachyonfx/wasm",
]
egui-desktop = [
    "egui",
    "dep:env_logger"
]
