[workspace]
members = ["language"]

[package]
name = "incremental-code"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
log = "0.4.29"

[dependencies]
language = { path = "language" }
# general dependencies
ratatui = { version = "0.30.0", default-features = false, features = ["unstable-rendered-line-info"] }
ratatui-core = { version = "0.1.0" }
tachyonfx = { version = "0.25.0", features = ["std"] }
log = { workspace = true }
simple_logger = "5.2.0"
web-time = { version = "1.1" }
throbber-widgets-tui = { version = "0.11.0" }
chumsky = "0.12.0"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"
rand = { version = "0.10.1", features = [] }
getrandom = { version = "*", features = ["wasm_js"] }
ratatui-widgets = "0.3.0"
ouroboros = "0.18.5"

# code editor
ropey = "^1.6"
unicode-width = "~0.2"
unicode-segmentation = "^1.12"
logos = "0.16.1"

# tui dependencies
crossterm = { version = "0.29.0", optional = true }

# opengl dependencies
beamterm-core = { version = "^1.0", optional = true }
ratbeam = { git = "https://github.com/atollk/ratbeam", branch = "main", optional = true }
glutin = { version = "0.32", optional = true }
winit = { version = "0.30", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }
glow = { version = "0.17.0", optional = true }

# ratzilla dependencies
ratzilla = { git = "https://github.com/atollk/ratzilla", rev = "373a39b17d0fbf5d1d72f77fd28450c102ada33e", optional = true }
beamterm-renderer = { version = "^1.0", optional = true }

# egui dependencies
egui = { version = "0.34", optional = true }
eframe = { version = "0.34", features = ["persistence"], optional = true }
egui_ratatui = { version = "^2.2.0", optional = true }
soft_ratatui = { version = "0.2", optional = true, features = ["unicodefonts"] }

# egui-web dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["EventTarget", "Worker", "WorkerOptions", "WorkerType", "MessageEvent", "HtmlCanvasElement", "Window", "Document"], optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }

# egui-desktop dependencies
env_logger = { version = "0.11.8", optional = true }
bitflags = "2.11.1"

[package.metadata.bin]
trunk = { version = "0.21.14" }

[features]
tui = [
    "dep:crossterm",
    "ratatui/crossterm",
]
opengl = [
    "dep:beamterm-core",
    "dep:ratbeam",
    'dep:glutin',
    'dep:winit',
    'dep:glow',
    'dep:glutin-winit',
    'dep:raw-window-handle',
]
ratzilla = [
    "dep:beamterm-renderer",
    "dep:ratzilla",
    "tachyonfx/wasm",
]
egui = [
    "dep:egui_ratatui",
    "dep:soft_ratatui",
    "dep:egui",
    "dep:eframe",
]
egui-web = [
    "egui",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "tachyonfx/wasm",
]
egui-desktop = [
    "egui",
    "dep:env_logger"
]

[lints.clippy]
new_without_default = "allow"
style = "allow"
complexity = "allow"
