[package]
name = "incremental-code"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["language", "proc_macro"]

[workspace.dependencies]
log = "0.4.29"

[dependencies]
language = { path = "language" }
proc_macro = { path = "proc_macro" }

# tui dependencies
crossterm = { version = "0.29.0", optional = true }
directories = { version = "6.0.0", optional = true }

# opengl dependencies
beamterm-core = { version = "^1.0", optional = true }
ratbeam = { git = "https://github.com/atollk/ratbeam", branch = "main", optional = true }
glutin = { version = "0.32", optional = true }
winit = { version = "0.30", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }
glow = { version = "0.17.0", optional = true }

# ratzilla dependencies
ratzilla = { git = "https://github.com/atollk/ratzilla", rev = "373a39b17d0fbf5d1d72f77fd28450c102ada33e", optional = true }
beamterm-renderer = { version = "^1.0", optional = true }
web-sys = { version = "0.3.97", features = ["Storage", "Window"], optional = true }
console_log = { version = "1.0", optional = true }

# general dependencies
ratatui = { version = "0.30.0", default-features = false, features = ["unstable-rendered-line-info"] }
ratatui-core = { version = "0.1.0" }
tachyonfx = { version = "0.25.0", features = ["std"] }
log = { workspace = true }
simple_logger = "5.2.0"
web-time = { version = "1.1" }
throbber-widgets-tui = { version = "0.11.0" }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"
rand = { version = "0.10.1", features = [] }
getrandom = { version = "*", features = ["wasm_js"] }
ratatui-widgets = "0.3.0"
ouroboros = "0.18.5"
bitflags = "2.11.1"
derive_more = { version = "2.1.1", features = ["default", "add", "add_assign"] }
parking_lot = "0.12.5"
ropey = "^1.6"
unicode-width = "~0.2"
unicode-segmentation = "^1.12"
logos = "0.16.1"
serde_json = "1.0.149"
dyn-clone = "1.0.20"
rodio = "0.22.2"

[package.metadata.bin]
trunk = { version = "0.21.14" }

[features]
tui = [
    "dep:crossterm",
    "ratatui/crossterm",
    "dep:directories",
]
opengl = [
    "dep:beamterm-core",
    "dep:ratbeam",
    'dep:glutin',
    'dep:winit',
    'dep:glow',
    'dep:glutin-winit',
    'dep:raw-window-handle',
    "dep:directories",
]
ratzilla = [
    "dep:beamterm-renderer",
    "dep:ratzilla",
    "dep:web-sys",
    "dep:console_log",
    "tachyonfx/wasm",
]

[lints.clippy]
new_without_default = "allow"
style = "allow"
complexity = "allow"
